# Dashboard-TR069

./: Procfile  load_initial_data.py  pyproject.toml  requirements.txt
data/: DADOS TR069 - Dados.csv
src/: main.py
src/database/: app.db
src/models/: data.py
src/routes/: dashboard.py  user.py
src/static/: index.html  script.js  styles.css
