[tool.poetry]
name = "tr069-gb"
version = "0.1.0"
description = "Projeto TR069 - GB"
authors = ["Petrick Silva <seu@email.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
blinker = "1.9.0"
click = "8.2.1"
flask = "3.1.1"
flask-cors = "6.0.0"
flask-sqlalchemy = "3.1.1"
greenlet = "3.1.1"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
markupsafe = "3.0.2"
sqlalchemy = "2.0.36"
typing-extensions = "4.12.2"
werkzeug = "3.1.3"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"